crates/blockchain/primitives/tests/compile_fail/storage_handle_lifetime_escape.stderr
error[E0515]: cannot return value referencing local variable `provider`
 --> tests/compile_fail/storage_handle_lifetime_escape.rs:5:5
  |
5 |     StorageHandle::new(&mut provider)
  |     ^^^^^^^^^^^^^^^^^^^-------------^
  |     |                  |
  |     |                  `provider` is borrowed here
  |     returns a value referencing data owned by the current function
